--- a/views/category.html
+++ b/views/category.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="proprice">
                     <a href="#/product/{{product.id}}">
-                        <h5 ng-show="(accesslevel!=3)">£ {{product.firstsaleprice}}</h5>
+                        <h5 ng-show="(accesslevel!=3)">£ {{product.price}}</h5>
                         <h5 ng-show="(accesslevel==3)">£ {{product.wholesaleprice}}</h5>
 						<!--h5 class="discountprice">£ {{product.price}}</h5-->
                     </a>
