--- a/views/navigation.html
+++ b/views/navigation.html
@@ -5,11 +5,15 @@
        <center>
         <ul class="nav nav-pills font mainmenu" ng-class="ishome" >
            
-            <li ng-mouseover="showsub(5)" ng-mouseleave="hidesub(5)" style="position:relative;">
+            <li>
+                <a href="#/home">New In</a>
+                
+            </li>
+            <!--li ng-mouseover="showsub(5)" ng-mouseleave="hidesub(5)" style="position:relative;">
                 <a href="#/home">New In</a>
                 <div class="megamenu megamenu2" ng-include src="submenuval[5]" ng-show="submenu[5]">
                 </div>
-            </li>
+            </li-->
 
             <li ng-mouseover="showsub(0)" ng-mouseleave="hidesub(0)" style="position:relative;">
                 <a href="#/category/1">Jewellery</a>
