--- a/views/product.html
+++ b/views/product.html
@@ -19,7 +19,9 @@
                     <h5>{{product.name}}</h5> 
                     <h4>£ {{rate}}</h4>
                     <!--h4 class="discountprice">£ 400</h4-->
-                    <h6>Available {{product.quantity}} pcs</h6>
+                    <h6 ng-show="product.quantity==0">OUT OF STOCK</h6>
+                    <h6 ng-show="product.quantity!=0">IN STOCK</h6>
+                    <!--h6>Available {{product.quantity}} pcs</h6-->
                 </div>
                 <div class="prodcutcontent">
                     <div class="productdesc">
