--- a/views/returns.html
+++ b/views/returns.html
@@ -35,7 +35,8 @@
             <ol start="2">
                 <li>Return to the item to us within 14 days of placing the order to the following address:</li>
             </ol>
-
+            <p><strong>LYLA LOVES</strong>
+            </p>
             <p>Unit 11 Adrienne Avenue</p>
             <p>Adrienne Business Centre</p>
             <p>Southall Middlesex</p>
