Social icons links
Social icons links

--- a/views/header.html
+++ b/views/header.html
@@ -22,8 +22,8 @@
                     </div>
                     </div>
                     <!--############################33-->
-                    
-                    <!--############################33->
+
+<!--############################33->
                     <div class="myaccount" ng-show="visible" ng-mouseleave="hideaccount()">
                         <p>My Account</p>
                         <p>Wishlist</p>
@@ -56,7 +56,7 @@
     <br>b
 </div-->
 <div class="header">
-           <!--div class="col-xs-8 col-xs-offset-4 myaccount1">
+    <!--div class="col-xs-8 col-xs-offset-4 myaccount1">
                         <a href="#/Login" class="pulseanimation" ng-mouseover="showaccount()" style="position: absolute;margin-top: 31px;"><span class="glyphicon glyphicon-user"></span>&nbsp; My Account{{demo}}</a> 
                    
             <div class="myaccount" ng-show="visible" ng-mouseleave="hideaccount()">
@@ -66,27 +66,37 @@
                         <p><a href="#/{{loginlogouttext}}">{{loginlogouttext}}</a></p>
                     </div>
         </div-->
-    
-        
-        <div class="row">
+
+
+    <div class="row">
         <div class="col-xs-3">
             <div ng-class="firstloadclass" class="logo fadeInRight">
-                <a href="#/home" class="" ng-class="ishome" >
+                <a href="#/home" class="" ng-class="ishome">
                     <img src="img/logo.jpg" />
                 </a>
             </div>
         </div>
         <div class="col-xs-6">
-            
+
             <center>
-        <a href="http://instagram.com/lyla_loves" target="_blank"><img src="img/insta.png" class="socialicons"></a>
-        <a href="https://twitter.com/lyla_loves" target="_blank"><img src="img/twitter.png" class="socialicons"></a>
-        <a href="https://www.facebook.com/lylaloves" target="_blank"><img src="img/facebook.png" class="socialicons"></a>
-        <a href="#" target="_blank"><img src="img/pinterest.png" class="socialicons"></a>
-        <a href="#" target="_blank"><img src="img/tumbler.png" class="socialicons"></a>
-        </center>
-            
-            
+                <a href="http://instagram.com/lyla_loves" target="_blank">
+                    <img src="img/insta.png" class="socialicons">
+                </a>
+                <a href="https://twitter.com/lyla_loves" target="_blank">
+                    <img src="img/twitter.png" class="socialicons">
+                </a>
+                <a href="https://www.facebook.com/lylaloves" target="_blank">
+                    <img src="img/facebook.png" class="socialicons">
+                </a>
+                <a href="http://www.pinterest.com/lloves1548/" target="_blank">
+                    <img src="img/pinterest.png" class="socialicons">
+                </a>
+                <a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
+                    <img src="img/tumbler.png" class="socialicons">
+                </a>
+            </center>
+
+
         </div>
         <!--div class="col-xs-5">
             <input type="text" class="form-control headsearch" placeholder="Search">
@@ -97,10 +107,10 @@
         </div-->
         <div class="col-xs-3">
             <div ng-class="firstloadclass" class="headerright fadeInRight">
-                <a href="#/home" class="" ng-class="ishome" >
+                <a href="#/home" class="" ng-class="ishome">
                     <img src="img/butterfly.png" alt="" class="butterfly-top">
-                    </a>
-                    <!--div class="col-xs-8 col-xs-offset-4">
+                </a>
+                <!--div class="col-xs-8 col-xs-offset-4">
                         <a href="#/Login" class="pulseanimation" ng-mouseover="showaccount()"><span class="glyphicon glyphicon-user"></span>&nbsp; My Account{{demo}}</a> 
                     &nbsp;&nbsp;&nbsp;<a href="#/cart" class="pulseanimation"><span class="glyphicon  glyphicon-shopping-cart"></span>&nbsp; Cart</a>
                     <div class="badge newbadge">
@@ -115,8 +125,8 @@
                     </div>
 
                 </div-->
-            
+
+            </div>
         </div>
     </div>
-</div>
 
