--- a/views/jewellerysubmenu.html
+++ b/views/jewellerysubmenu.html
@@ -5,7 +5,7 @@
             
             <ul class="submenudown">
                 <li>
-                    <a href="#/category/2">Necklace</a>
+                    <a href="#/category/2">Necklaces</a>
                 </li>
                 <li>
                     <a href="#/category/3">Bracelets</a>
