--- a/lib/css/bootstrap.css
+++ b/lib/css/bootstrap.css
@@ -1695,7 +1695,7 @@ output {
 .form-control {
     width: 100%;
     height: 25px;
-    padding: 6px 12px;
+    padding: 4px 12px;
     font-size: 13px;
     line-height: 1.42857143;
     color: #555;
@@ -2052,7 +2052,7 @@ fieldset[disabled] .btn {
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-    color: #FFABD3;
+    color: #000000;
     background-color: #F5F5F5;
     bordeR: none;
 }
