--- a/views/cart.html
+++ b/views/cart.html
@@ -15,7 +15,6 @@
                 <thead>
                     <tr>
                         <th>Product Name</th>
-                      
                         <th>Unit Price</th>
                         <th>Qty</th>
                         <th>Subtotal</th>
@@ -25,39 +24,44 @@
                 <tbody>
                     <tr ng-repeat="singlecart in cart">
                         <td>{{singlecart.name}}</td>
-                        
+
                         <td>£{{singlecart.price}}</td>
                         <td>
                             <input type="text" ng-model="newquantity[$index]" class="form-control cartinput">
                         </td>
                         <td>£{{singlecart.subtotal}}</td>
-                        <td><a class="btn btn-primary" ng-click="addtocart(singlecart.id,singlecart.name,singlecart.price,newquantity[$index])"><strong>Save</strong></a> &nbsp; &nbsp; &nbsp;<a ng-click="deletecart(singlecart.id)"><strong>X</strong></a></td>
-                        
+                        <td><a class="btn btn-primary" ng-click="addtocart(singlecart.id,singlecart.name,singlecart.price,newquantity[$index],$index)"><strong>Save</strong></a> &nbsp; &nbsp; &nbsp;<a ng-click="deletecart(singlecart.id)"><strong>X</strong></a>
+                        </td>
+
                     </tr>
 
                 </tbody>
             </table>
-            
-            
+
+
             <h3>Discount Codes</h3>
-            <p><input type="text" placeholder="Enter your coupon code" class="form-control newsletteremail " style="margin-right:5px;"><a class="btn btn-primary">Apply Coupon</a><a href="#/checkout" class="btn btn-primary pull-right">Proceed to checkout</a></p>
-            
+            <p>
+                <input type="text" placeholder="Enter your coupon code" class="form-control newsletteremail " style="margin-right:5px;"><a class="btn btn-primary">Apply Coupon</a><a href="#/checkout" class="btn btn-primary pull-right">Proceed to checkout</a>
+            </p>
+
             <div class="checkout row">
                 <div class="col-xs-8"></div>
-                <div class="col-xs-4"><table class="table table-bordered ">
-                    <tr>
-                        <th>Sub Total</th>
-                        <th>Discount</th>
-                        <th>Grand Total</th>
-                    </tr>
-                    <tr>
-                        <td>£ {{subtotal}}</td>
-                        <td>£ 0</td>
-                        <td>£ {{subtotal}}</td>
-                    </tr>
-                </table></div>
+                <div class="col-xs-4">
+                    <table class="table table-bordered ">
+                        <tr>
+                            <th>Sub Total</th>
+                            <th>Discount</th>
+                            <th>Grand Total</th>
+                        </tr>
+                        <tr>
+                            <td>£ {{subtotal}}</td>
+                            <td>£ 0</td>
+                            <td>£ {{subtotal}}</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-            
+
         </div>
     </div>
 
