--- a/views/category.html
+++ b/views/category.html
@@ -1,8 +1,8 @@
-<div class="content">
+<div class="content" >
     <div class="contenttop">
         <div class="row">
             <div class="col-xs-4">
-                <span class="breadcrumb">
+                <span class="breadcrumb" >
 							Home / 
 							<span ng-repeat="br in breadcrumbs" ng-class="{'active':currentcategory == br.id}">
 								<a href="#/category/{{br.id}}">{{br.name}} <span ng-hide="{{$last}}">/</span> 
@@ -62,3 +62,4 @@
 
     </div>
 </div>
+<button class="gototop btn btn-default" ng-click="gototop();">Back To Top</button>
