--- a/views/header.html
+++ b/views/header.html
@@ -71,7 +71,7 @@
     <div class="row">
         <div class="col-xs-3">
             <div ng-class="firstloadclass" class="logo fadeInRight">
-                <a href="#/home" class="" ng-class="ishome">
+                <a href="#/home" class="" ng-class="ishome" id="totop">
                     <img src="img/logo.jpg" />
                 </a>
             </div>
