--- a/views/navigation.html
+++ b/views/navigation.html
@@ -31,7 +31,7 @@
                 </div>
             </li-->
             <li>
-                <a href="#/lylaloves">Lyla Loves..</a>
+                <a href="#/lylaloves">lyla loves..</a>
                 
             </li>
 
