--- a/views/checkout.html
+++ b/views/checkout.html
@@ -44,7 +44,7 @@
                                         </div>
                                         <div class="col-xs-6 " ng-show="(isloggedin=='0')">
                                             <h4>LOGIN</h4>
-                                            <input type="text" placeholder="Username or email" class="form-control" required>
+                                            <input type="text" placeholder="Username or email" class="form-control" required> 
                                             <br>
                                             <br>
                                             <input type="password" placeholder="Password" class="form-control" required>
@@ -76,11 +76,11 @@
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="text" placeholder="First Name" ng-model="form.firstname" class="form-control" required>
+                                    <input type="text" placeholder="First Name" ng-model="form.firstname" class="form-control" required><span class="red">*</span>
                                 </div>
                                 <div class="col-xs-4">
 
-                                    <input type="text" placeholder="Last Name" ng-model="form.lastname" class="form-control" required>
+                                    <input type="text" placeholder="Last Name" ng-model="form.lastname" class="form-control" required><span class="red">*</span>
                                 </div>
                             </div>
 
@@ -91,19 +91,19 @@
                                 </div>
                                 <div class="col-xs-4">
 
-                                    <input type="email" placeholder="Email" ng-model="form.email" class="form-control" required>
+                                    <input type="email" placeholder="Email" ng-model="form.email" class="form-control" required><span class="red">*</span>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-8">
-                                    <textarea name="" id="" class="form-control" ng-model="form.billingaddress" placeholder="Address"></textarea>
+                                    <textarea name="" id="" class="form-control" ng-model="form.billingaddress" placeholder="Address"></textarea><span class="red">*</span>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="text" placeholder="City" ng-model="form.billingcity" class="form-control" required>
+                                    <input type="text" placeholder="City" ng-model="form.billingcity" class="form-control" required><span class="red">*</span>
 
                                 </div>
                                 <div class="col-xs-4">
@@ -114,13 +114,13 @@
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="text" placeholder="Zip/Postal Code" ng-model="form.billingpincode" class="form-control" required>
+                                    <input type="text" placeholder="Zip/Postal Code" ng-model="form.billingpincode" class="form-control" required><span class="red">*</span>
 
                                 </div>
                                 <div class="col-xs-4">
 
 
-                                    <select placeholder="Country" ng-model="form.billingcountry" ng-change="free(form.billingcountry,subtotal)" class="form-control" required>
+                                    <select placeholder="Country" ng-model="form.billingcountry" ng-change="free(form.billingcountry,subtotal)" class="form-control" required><span class="red">*</span>
                                         <option value="">Select Country</option>
                                         <option value="Afganistan">Afghanistan</option>
                                         <option value="Albania">Albania</option>
@@ -375,7 +375,7 @@
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="tel" placeholder="Telephone" ng-model="form.phone" class="form-control" required>
+                                    <input type="tel" placeholder="Telephone" ng-model="form.phone" class="form-control" required><span class="red">*</span>
 
                                 </div>
                                 <div class="col-xs-4">
