--- a/views/checkout.html
+++ b/views/checkout.html
@@ -23,7 +23,7 @@
                         <div class="panel-body">
                             <div class="row billing">
                                 <div class="col-md-12">
-                                    <div class="row">
+                                    <div class="row" ng-show="(isloggedin=='0')">
                                         <div class="col-xs-6">
                                             <h4>CHECKOUT AS A GUEST OR REGISTER</h4>
                                             <p>Register with us for future convenience:</p>
@@ -42,16 +42,17 @@
                                             <!--{{form}}-->
                                             <div class="clearfix"></div>
                                         </div>
-                                        <div class="col-xs-6 " ng-show="(isloggedin=='0')">
+                                       <div class="col-xs-6">
                                             <h4>LOGIN</h4>
-                                            <input type="text" placeholder="Username or email" class="form-control" required> 
+                                            <h5>{{msg}}</h5>
+                                            <input type="text" placeholder="Username or email" ng-model="login.email" class="form-control" required> 
                                             <br>
                                             <br>
-                                            <input type="password" placeholder="Password" class="form-control" required>
+                                            <input type="password" placeholder="Password" ng-model="login.password" class="form-control" required>
                                             <br>
                                             <br>
                                             <a href="">Forgot password ?</a>
-                                            <button href class="btn btn-primary pull-right">Login</button>
+                                            <button href class="btn btn-primary pull-right" ng-click="userloginckeckout(login)">Login</button>
 
 
                                         </div>
@@ -72,15 +73,16 @@
       </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse in">
+                        <p class="errormsg">{{errorvalid}}<p>
                         <div class="panel-body billing-info">
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="text" placeholder="First Name" ng-model="form.firstname" class="form-control" required><span class="red">*</span>
+                                    <input type="text" placeholder="First Name" ng-model="form.firstname" class="form-control" ng-class="allvalidation[0].validation" required><span class="red">*</span>
                                 </div>
                                 <div class="col-xs-4">
 
-                                    <input type="text" placeholder="Last Name" ng-model="form.lastname" class="form-control" required><span class="red">*</span>
+                                    <input type="text" placeholder="Last Name" ng-model="form.lastname" class="form-control" ng-class="allvalidation[1].validation" required><span class="red">*</span>
                                 </div>
                             </div>
 
@@ -91,19 +93,19 @@
                                 </div>
                                 <div class="col-xs-4">
 
-                                    <input type="email" placeholder="Email" ng-model="form.email" class="form-control" required><span class="red">*</span>
+                                    <input type="email" placeholder="Email" ng-model="form.email" class="form-control" ng-class="allvalidation[2].validation" required><span class="red">*</span>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-8">
-                                    <textarea name="" id="" class="form-control" ng-model="form.billingaddress" placeholder="Address"></textarea><span class="red">*</span>
+                                    <textarea name="" id="" class="form-control" ng-model="form.billingaddress" placeholder="Address" ng-class="allvalidation[3].validation" required></textarea><span class="red">*</span>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="text" placeholder="City" ng-model="form.billingcity" class="form-control" required><span class="red">*</span>
+                                    <input type="text" placeholder="City" ng-model="form.billingcity" class="form-control" ng-class="allvalidation[4].validation" required><span class="red">*</span>
 
                                 </div>
                                 <div class="col-xs-4">
@@ -114,13 +116,13 @@
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="text" placeholder="Zip/Postal Code" ng-model="form.billingpincode" class="form-control" required><span class="red">*</span>
+                                    <input type="text" placeholder="Zip/Postal Code" ng-model="form.billingpincode" class="form-control" ng-class="allvalidation[5].validation" required><span class="red">*</span>
 
                                 </div>
                                 <div class="col-xs-4">
 
 
-                                    <select placeholder="Country" ng-model="form.billingcountry" ng-change="free(form.billingcountry,subtotal)" class="form-control" required><span class="red">*</span>
+                                    <select placeholder="Country" ng-model="form.billingcountry" ng-change="free(form.billingcountry,subtotal)" class="form-control" ng-class="allvalidation[6].validation" required>
                                         <option value="">Select Country</option>
                                         <option value="Afganistan">Afghanistan</option>
                                         <option value="Albania">Albania</option>
@@ -369,13 +371,13 @@
                                         <option value="Zaire">Zaire</option>
                                         <option value="Zambia">Zambia</option>
                                         <option value="Zimbabwe">Zimbabwe</option>
-                                    </select>
+                                    </select><span class="red">*</span>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="tel" placeholder="Telephone" ng-model="form.phone" class="form-control" required><span class="red">*</span>
+                                    <input type="tel" placeholder="Telephone" ng-model="form.phone" class="form-control" ng-class="allvalidation[7].validation" required><span class="red">*</span>
 
                                 </div>
                                 <div class="col-xs-4">
@@ -385,9 +387,9 @@
                             </div>
 
                             <p>
-                                <input type="radio" name="1" ng-model="form.shipdifferent" value="1">Ship to this address
+                                <input type="radio" name="shippdifferent" ng-model="form.shipdifferent" value="1">Ship to this address
                                 <br>
-                                <input type="radio" name="1" ng-model="form.shipdifferent" value="2">Ship to different address</p>
+                                <input type="radio" name="shippdifferent" ng-model="form.shipdifferent" value="2">Ship to different address</p>
                             <button class="btn btn-primary pull-right" ng-click="continueshipping()">Continue</button>
                             <div class="clearfix"></div>
                         </div>
@@ -400,13 +402,13 @@
 
                             <div class="row">
                                 <div class="col-xs-8">
-                                    <textarea name="" id="" class="form-control" ng-model="form.shippingaddress" placeholder="Address"></textarea>
+                                    <textarea name="" id="" class="form-control" ng-model="form.shippingaddress" placeholder="Address" ng-class="allvalidation[8].validation" required></textarea>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="text" placeholder="City" ng-model="form.shippingcity" class="form-control" required>
+                                    <input type="text" placeholder="City" ng-model="form.shippingcity" class="form-control" ng-class="allvalidation[9].validation" required>
 
                                 </div>
                                 <div class="col-xs-4">
@@ -417,13 +419,13 @@
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="text" placeholder="Zip/Postal Code" ng-model="form.shippingpincode" class="form-control" required>
+                                    <input type="text" placeholder="Zip/Postal Code" ng-model="form.shippingpincode" class="form-control" ng-class="allvalidation[10].validation" required>
 
                                 </div>
                                 <div class="col-xs-4">
 
 
-                                    <select type="text" placeholder="Country" ng-model="form.shippingcountry" class="form-control" required>
+                                    <select type="text" placeholder="Country" ng-model="form.shippingcountry" class="form-control" ng-class="allvalidation[11].validation" required>
                                         <option value="">Select Country</option>
                                         <option value="Afganistan">Afghanistan</option>
                                         <option value="Albania">Albania</option>
@@ -677,7 +679,7 @@
                             </div>
 
                             <p>
-                                <button class="btn btn-primary pull-right" ng-click="continueshipping()">Continue</button>
+                                <button class="btn btn-primary pull-right" ng-click="continueshipping1()">Continue</button>
                                 <div class="clearfix"></div>
                         </div>
                     </div>
@@ -709,12 +711,12 @@
                                 <input type="radio" name="shipping" value="5" ng-model="form.shippingmethod">International Delivery £ 5.00
                             </p>
                                 
-                            <button class="btn btn-primary pull-right" ng-click="continuepayment()">Continue</button>
+                            <button class="btn btn-primary pull-right" ng-click="continuepayment(form)">Continue</button>
                             <div class="clearfix"></div>
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-default" ng-show="(shippinginfo=='1')">
+                <div class="panel panel-default" ng-show="(paywithcard=='1')">
                     <div class="panel-heading">
                         <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion">
