--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -5,10 +5,6 @@
     font-weight: normal;
     font-style: normal;
 }
-.errormsg{
-    color: red;
-}
-.ng-invalid.ng-dirty { border: 1px solid red; }
 .font {
     font-family: "CheddarJack";
     font-size: x-large;
@@ -43,9 +39,9 @@
 .newbadge {
     background-color: rgb(39, 240, 232);
     position: absolute;
-    margin-left: 18px;
-    /* margin-top: 52px; */
-    z-index: 4;
+    margin-left: 541px;
+    margin-top: 52px;
+    z-index: -1;
 }
 .msg {
     color: white;
