--- a/views/category.html
+++ b/views/category.html
@@ -62,4 +62,4 @@
 
     </div>
 </div>
-<button class="gototop btn btn-default" ng-click="gototop();">Back To Top</button>
+<a class="gototop btn btn-primary" ng-click="gototop();"><span class="glyphicon glyphicon-chevron-up"></span></a>
