--- a/views/checkout.html
+++ b/views/checkout.html
@@ -746,7 +746,7 @@
                                             data-name="Lyla Loves"
                                             data-amount="{{subtotal+form.shippingcost}}.00"
                                             data-currency="GBP"
-                                            data-callback="http://lylaloves.co.uk/#/thankyou"
+                                            data-callback="http://www.lylaloves.co.uk/#/thankyou"
                                             async
                                             ></script>
 
