Some small issue fixed and parallex added.
Some small issue fixed and parallex added.

--- a/views/category.html
+++ b/views/category.html
@@ -62,4 +62,4 @@
 
     </div>
 </div>
-<a class="gototop btn btn-primary" ng-click="gototop();"><span class="glyphicon glyphicon-chevron-up"></span></a>
+<a skrollr class="gototop btn btn-default" data-0="opacity:0;" data-1000="opacity:1;" ng-click="gototop();"><span class="glyphicon glyphicon-chevron-up"></span></a>
