--- a/views/content.html
+++ b/views/content.html
@@ -1,7 +1,7 @@
     <div class="slidesel" >
-        <div class="row marginer">
+        <div skrollr class="row marginer"  data-0="opacity:1;margin-top:0px;margin-bottom:0px;" data-500="opacity:0.8;margin-top:500px;margin-bottom:-500px;">
             <div class="col-xs-12 wow fadeInLeft">
-             <center><img src="img/logo.jpg"></center>
+                <center><img src="img/logo.jpg"></center>
             </div>
        </div>
 
